# tanwei-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  connection_monitor.py  docker-compose.yml  pyproject.toml
config/: bot.yaml
config/workflows/: _example.yaml  daily-report.yaml  feishu-test.yaml  news-intel.yaml
docs/: model-switching.md  system-summary-v8.md
src/tanwei/: cli.py
src/tanwei/agents/: llm.py
src/tanwei/channels/: base.py  dingtalk.py  feishu.py
src/tanwei/core/: config.py  dedup.py  engine.py  engine.py.backup  engine.py.patch  logger.py  scheduler.py  usage.py
src/tanwei/sources/: base.py  rss.py
templates/: daily_brief.md  default_footer.md  news_analysis.md
